--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - web_db
 volumes:
